--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,12 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
+    /*removed class+id for more obvious targeting*/
 }
+
+
 
 .header div {
     padding-top: 15px;
@@ -86,16 +89,22 @@ p {
     color: #ffffff;
 }
 
+/*combined classes for easier reading*/
+
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
+
+/*combined classes for easier reading*/
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img  {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
+/*combined classes for easier reading*/
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
@@ -105,16 +114,21 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+/*combined classes for easier reading*/
 
 
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
+/*combined classes for easier reading*/
+
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/*combined classes for easier reading*/
 
 .footer {
     padding: 30px;
@@ -122,4 +136,3 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     font-size: 20px;
-}
